syntax = "proto3";

package wallet;

service WalletService {
  rpc GetUserByAccountNumber (GetUserByAccountNumberRequest) returns (GetUserByAccountNumberResponse);
  rpc DebitBalance(DebitRequest) returns (DebitResponse);
  rpc CreditBalance(CreditRequest) returns (CreditResponse);
  rpc RefundDebit(RefundDebitRequest) returns (RefundDebitResponse);
  rpc UndoCredit(UndoCreditRequest) returns (UndoCreditResponse);
}
message GetUserByAccountNumberRequest {
  string account_number = 1;
}

message GetUserByAccountNumberResponse {
  string status = 1;
  string user_id = 2;
  string name = 3;
  string account_number = 4;
}

message DebitRequest {
  string user_id = 1;
  int32 amount = 2;
}

message CreditRequest {
  string user_id = 1;
  int32 amount = 2;
}

message RefundDebitRequest {
  string user_id = 1;
  int32 amount = 2;
  string transaction_id = 3;
}

message UndoCreditRequest {
  string user_id = 1;
  int32 amount = 2;
  string transaction_id = 3;
}

message DebitResponse {
  bool success = 1;
  string message = 2;
}

message CreditResponse {
  bool success = 1;
  string message = 2;
}

message RefundDebitResponse {
  bool success = 1;
  string message = 2;
}

message UndoCreditResponse {
  bool success = 1;
  string message = 2;
}
